Fixed position of scrollbar to avoid it shifting content

--- a/src/App.css
+++ b/src/App.css
@@ -38,6 +38,8 @@ body {
   margin: 0;
   padding: 0;
   background-color: var(--elektron-black);
+  overflow-y: scroll;
+  scrollbar-gutter: stable;
 }
 
 .container {
